<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/placeHolderFragment"
        android:title="@string/products_recipes"
        android:icon="@drawable/ic_baseline_menu_book_24"
        android:enabled="true" />

    <item
        android:id="@+id/statsDayFragment"
        android:title="@string/calorie_tracker"
        android:icon="@drawable/ic_baseline_show_chart_24"
        android:enabled="true" />


    <item
        android:id="@+id/placeholder"
        android:title=""
        android:enabled="false" />


    <item
        android:id="@+id/statsWeekFragment"
        android:title="@string/stats"
        android:icon="@drawable/ic_baseline_bar_chart_24"
        android:enabled="true" />

    <item
        android:id="@+id/settingsFragment"
        android:title="@string/settings"
        android:icon="@drawable/ic_baseline_settings_24"
        android:enabled="true" />

</menu>
