<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_green"
    tools:context=".viewpager.NotificationsFragment">


    <TextView
        android:id="@+id/tv_title"
        style="@style/vp_tvDescriptionStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vp_notif_title"
        app:layout_constraintBottom_toTopOf="@id/tv_recipe"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/tv_recipe"
        style="@style/vp_tvBlack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/vp_notif_recipe"
        app:layout_constraintBottom_toTopOf="@id/tv_reminder"
        app:layout_constraintEnd_toEndOf="@+id/tv_title"
        app:layout_constraintStart_toStartOf="@+id/tv_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />

    <TextView
        android:id="@+id/tv_reminder"
        style="@style/vp_tvBlack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vp_notif_reminder"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toTopOf="@id/tv_hint"
        app:layout_constraintEnd_toEndOf="@+id/tv_recipe"
        app:layout_constraintStart_toStartOf="@+id/tv_recipe"
        app:layout_constraintTop_toBottomOf="@+id/tv_recipe" />

    <TextView
        android:id="@+id/tv_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/vp_notif_hint"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tv_reminder"
        app:layout_constraintStart_toStartOf="@+id/tv_reminder"
        app:layout_constraintTop_toBottomOf="@+id/tv_reminder" />

</androidx.constraintlayout.widget.ConstraintLayout>
